# Games

./: README.md  pyproject.toml  snake_game.py  tic_tac_toe.py
ak games/: dice.py  rock_paper_scissor.py
