[tool.poetry]
name = "ak games"
version = "0.1.0"
description = "Basic Games library for developers"
authors = ["akashauti23 <akashauti23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
